@@ -1,4 +1,4 @@
-.\" Copyright (c) 2005 Massachusetts Institute of Technology
+.\" Copyright (c) 2006 Massachusetts Institute of Technology
 .\" 
 .\" This program is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published by
